{
    "name": "Controls",
    "maps": [
        {
            "name": "GameplayNavigation",
            "id": "af572396-4e2d-401f-aaa9-49487163cfe0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "42ab8c5a-669b-4f9c-a268-4bd1e48c2588",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractPiqueNique",
                    "type": "Button",
                    "id": "c7cf6dd0-46c7-4630-a502-0de07819136b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractCanon",
                    "type": "Button",
                    "id": "1c19ab2c-0fbd-4742-a135-7389c737ffe2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractIngenior",
                    "type": "Button",
                    "id": "5aaa1421-8f3d-4f0c-9400-65b66c1d21fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractKitchen",
                    "type": "Button",
                    "id": "516ca111-8ad1-48b2-a3e9-51b339a378a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6511529-9d0d-4f9d-b4fc-d5004f799140",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ZQSD",
                    "id": "b0894fa1-dc7a-4301-8544-23bdfe92a5a2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cca847a3-b55c-40ca-b1ef-1fe749f80bd6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "12021c72-18b6-4337-b1cb-eda4b5986381",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c59f61c8-28f3-4559-a383-6ca0df85e9ce",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "35466478-3243-4447-bc72-94a0c6af773c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CharacterChoice",
            "id": "741c1436-458c-4611-82ed-e77cc534ebd6",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Cuisine",
            "id": "16ef3cb5-bb36-4b58-aaa2-e8b7af01c40c",
            "actions": [
                {
                    "name": "CuisinerRagout",
                    "type": "Button",
                    "id": "50d8c247-7dcc-40bb-aa0c-15a84ab464c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CuisinerRhum",
                    "type": "Button",
                    "id": "851a40b2-d92b-4808-9ed1-d07f5a1979e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89c3d4c4-ea19-46c6-b80f-332dd81f179e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CuisinerRagout",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b253371c-58f0-4c87-a82e-2218bbf82c0e",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CuisinerRhum",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PiqueNique",
            "id": "94ff8af2-c831-45d3-8c8a-4636e1b55c5b",
            "actions": [
                {
                    "name": "Manger",
                    "type": "Button",
                    "id": "730f50e5-f0f0-4b02-b16c-6b341a3ffeb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ff15f21-3471-4d5a-be1a-a3367fb224a4",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Manger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Canon",
            "id": "d5bbb7d4-aad9-4369-a081-c2ff5be0af3c",
            "actions": [
                {
                    "name": "RepCanon",
                    "type": "Button",
                    "id": "fb9a845c-135a-43e5-a038-8c6098986e16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "160b0b71-c754-42ca-b591-ac1ddcca084b",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RepCanon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Ingenior",
            "id": "b15088c0-4c62-4121-accd-5d60cd39aecd",
            "actions": [
                {
                    "name": "AmeBateau",
                    "type": "Button",
                    "id": "2214f55f-cb23-49e1-9d6f-07df7e5e2a8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AmeCanon",
                    "type": "Button",
                    "id": "e009ccda-e0fe-41c1-8678-e5fbabd6b09c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b2f1c1e-6aea-4daa-a91b-6e5463ba730c",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AmeBateau",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae73bc9f-fd79-4711-b5ea-9ba6740eef87",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AmeCanon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}